--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,14 @@
     <meta name="viewport" content= "width=device-width, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta property="og:title" content="Chinese Relative Title Calculator"/>
+    <meta property="og:description" content="Chinese relative titles are complicated, here's a calculator to help."/>
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png"/>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Chinese Relative Title Calculator</title>
   </head>
   <body>
@@ -28,6 +20,5 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-
   </body>
 </html>
