--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <meta property="og:title" content="Chinese Relative Title Calculator"/>
-    <meta property="og:description" content="Chinese relative titles are complicated, here's a calculator to help."/>
+    <meta property="og:title" content="Asian Relative Title Calculator"/>
+    <meta property="og:description" content="Asian relative titles are complicated, here's a calculator to help."/>
     <meta property="og:image" content="%PUBLIC_URL%/favicon.png"/>
 
-    <title>Chinese Relative Title Calculator</title>
+    <title>Asian Relative Title Calculator</title>
   </head>
   <body>
     <noscript>
