--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content= "width=device-width, user-scalable=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content= "width=device-width, maximum-scale=1.0, initial-scale=1.0, user-scalable=0">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
